--- a/public/404.html
+++ b/public/404.html
@@ -7,33 +7,27 @@
   <title>Redirecting...</title>
   <script>
     // GitHub Pages 404.html fallback for React Router SPA
-    // This script handles redirects for GitHub Pages project sites
-    var basePath = '/alchemy-lens-website';
+    // This script handles redirects for React Router SPA
     var path = window.location.pathname;
     var search = window.location.search;
     var hash = window.location.hash;
-
-    // Remove base path if present to get the relative path
-    if (path.startsWith(basePath)) {
-      path = path.slice(basePath.length);
-    }
 
     // Ensure path starts with /
     if (!path.startsWith('/')) {
       path = '/' + path;
     }
 
-    // Redirect to index.html at the base path
-    var redirectUrl = basePath + '/index.html' + search + hash;
+    // Redirect to index.html
+    var redirectUrl = '/index.html' + search + hash;
     window.location.replace(redirectUrl);
   </script>
   <noscript>
-    <meta http-equiv="refresh" content="0; url=/alchemy-lens-website" />
+    <meta http-equiv="refresh" content="0; url=/" />
   </noscript>
 </head>
 
 <body>
-  <p>If you are not redirected automatically, <a href="/alchemy-lens-website">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
 </body>
 
 </html>
